--- a/playbook/roles/jenkins/tasks/main.yml
+++ b/playbook/roles/jenkins/tasks/main.yml
@@ -9,7 +9,7 @@
 
  - name: adding jenkins key to system
    apt_key: 
-      url: https://pkg.jenkins.io/debian-stable/jenkins.io.key
+      url: https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
       state: present   
 
  - name: adding jenkins repo to sourced.list     
